# sessrums

./: Cargo.toml  README.md
docs/: SessionTypeCombinatorsWithFixedPoint.md  SessionTypeCombinatorsWithFixedPoint.rs  Stage2-Implementation-Plan.md  api-ergonomics.md  chat_with_claude_1.md  documentation-report.md  error-handling.md  index.md  introduction.md  mpst-concepts.md  mpst-design.md  mpst-dsl-syntax.md  mpst-dsl.md  mpst-macro.md  mpst-overview.md  mpst-plan.md  mpst-research-notes.md  mpst.ipynb  offer-choose.md  quick-reference.md  session-types-diagrams.md  session-types-documentation.md  testing-protocols.md
examples/: async.rs  async_std_integration.rs  complex.rs  complex.rs_  connect.rs  ping_pong.rs_  recursion.rs  request_response.rs  send_trait.rs  send_trait_simple.rs  simple.rs  tokio_integration.rs
sessrums-examples/: Cargo.toml
sessrums-macro/: Cargo.toml
sessrums-types/: Cargo.toml
sessrums-types/src/: error.rs  lib.rs  messages.rs  projection.rs  roles.rs  transport.rs
sessrums-types/src/session_types/: binary.rs  common.rs  global.rs  local.rs  mod.rs  multiparty_session.rs
sessrums-types/tests/: binary_choice.rs  binary_recursive.rs  multiparty_basic.rs  multiparty_session.rs  ping_pong_binary_sequential.rs  projection_basic.rs  projection_choice.rs  projection_choice_simple.rs  projection_integration.rs  projection_recursive.rs  projection_recursive_integration.rs  projection_recursive_optimization.rs  projection_simple.rs
src/: api.rs  connect.rs  error.rs  io.rs  lib.rs
tests/: ERRORS.md  EXAMPLES.md  README.md  helpers.rs  (+17 more)
(+101 files in other folders)
