[package]
name = "sessrums"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

futures = "0.3"

[features]
default = ["tcp"]
tcp = []
unix = []

[dev-dependencies]
trybuild = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
