[package]
name = "sessrums-types"
version = "0.1.0"
edition = "2024"


[lib]
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sessrums-macro = { path = "./sessrums-macro" }
tokio = { version = "1.0", features = ["full"] } # Moved from dev-dependencies
futures = "0.3"

[features]
default = ["tcp"]
tcp = []
unix = []

[dev-dependencies]
trybuild = "1.0"
# tokio moved to [dependencies]
async-std = { version = "1.12", features = ["attributes"] }
